# Anisotropy-Spin-Waves-Coqblin-Schrieffer

./: LICENSE  README.md  aniso__j_5_2__l_3.sqlite  anisotropy_3_2.ipynb  anisotropy_5_2.ipynb  anisotropy_5_2_jl.ipynb  pyproject.toml
j__3_2_eps/: A_alphas__3_2.eps  A_z__3_2.eps  I_alphas__3_2.eps  I_z__3_2.eps
j__5_2_eps/: A_alphas__5_2.eps  A_z__5_2.eps  I_alphas__5_2.eps  I_z__5_2.eps
