[tool.poetry]
name = "aniso"
version = "0.1.0"
description = ""
authors = ["AlexEnrique <alexenriquecrispim@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
